--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <div class="container">
             <div class="nav">
-                <a href="#">IKEA</a>
+                <img src="img/logo.svg" alt="logo">
                 <div class="buttons">
                     <span>New</span>
                     <span>Product</span>
@@ -20,12 +20,12 @@
                     <span>Inspirations</span>
                 </div>
                 <div class="search">
-                    <!--ICONO BUSQUEDA-->
+                    <i class="material-icons">search</i>
                     <input type="text" placeholder="Search products...">
                 </div>
                 <div class="cart">
                     <span>$0</span>
-                    <!--ICONO CARRITO-->
+                    <i class="material-icons">local_grocery_store</i>
                 </div>
             </div>
             <div class="maincontent">
@@ -46,18 +46,21 @@
                             </div>
                         </div>
                         <div class="producticons">
-                            ICONOS DEL SOFA
+                            <i class="material-icons md-inactive">redeem</i>
+                            <i class="material-icons md-inactive">query_builder</i>
+                            <i class="material-icons md-inactive">security</i>
+                            <i class="material-icons md-inactive">grid_on</i>
                         </div>
                     </div>
                     <div class="price">
                         <span>$1,400</span>
-                        <button>ADD TO CART</button>
+                        <button>ADD TO CART<i class="material-icons">check</i></button>
                     </div>
                     <div class="allproducts">
                         <div class="card">
                             <h3>BUY ALL PRODUCTS (4)</h3>
                             <span>$1,481</span>
-                            <button>ADD TO CART</button>
+                            <button>ADD TO CART<i class="material-icons">check</i></button>
                         </div>
                         <div class="previews">
                             <div class="preview1"></div>
@@ -67,31 +70,31 @@
                     </div>
                     <div class="details">
                         <div class="detail">
-                            <!--ICONO-->
+                            <i class="material-icons md-inactive md-56">redeem</i>
                             <h3>Bonus card as a <br>gift</h3>
                             <div class="arrow">
-                                <!--ICONO-->  
+                                <i class="material-icons">arrow_forward</i> 
                             </div>
                         </div>
                         <div class="detail">
-                            <!--ICONO-->
+                            <i class="material-icons md-inactive md-56">query_builder</i>
                             <h3>24 hour support</h3>
                             <div class="arrow">
-                                <!--ICONO-->  
+                                <i class="material-icons">arrow_forward</i>  
                             </div>
                         </div>
                         <div class="detail">
-                            <!--ICONO-->
+                            <i class="material-icons md-inactive md-56">security</i>
                             <h3>10 year <br>guarantee</h3>
                             <div class="arrow">
-                                <!--ICONO-->  
+                                <i class="material-icons">arrow_forward</i>  
                             </div>
                         </div>
                         <div class="detail">
-                            <!--ICONO-->
-                            <h3>Newest technologies</h3>
+                            <i class="material-icons md-inactive md-56">grid_on</i>
+                            <h3>Newest <br>technologies</h3>
                             <div class="arrow">
-                                <!--ICONO-->  
+                                <i class="material-icons">arrow_forward</i> 
                             </div>
                         </div>
                     </div>
@@ -105,11 +108,11 @@
                         <h3>MY PROPOSALS</h3>
                         <div class="sofas">
                             <div class="stockholm">
-                                <!--icono sofa-->
+                                <i class="material-icons md-grey">weekend</i>
                                 <span>Sofa Stockholm</span>
                             </div>
                             <div class="reactive">
-                                <!--icono sofa-->
+                                <i class="material-icons md-grey">weekend</i>
                                 <span>Sofa Reactive</span>
                             </div>
                         </div>
@@ -117,17 +120,17 @@
                     <div class="choices">
                         <h3>MY CHOICES</h3>
                             <div class="choice">
-                                <!--icono sofa-->
+                                <i class="material-icons md-grey">weekend</i>
                                 <span>Armchairs</span>
-                                <!--icono edit-->
+                                <i class="material-icons md-18">create</i>
                             </div>
                             <div class="choice">
-                                <!--icono sofa-->
+                                <i class="material-icons md-grey">weekend</i>
                                 <span>Fairly big</span>
-                                <!--icono edit-->
+                                <i class="material-icons md-18">create</i>
                             </div>
                             <div class="message">
-                                <button>Supp</button>
+                                <button><i class="material-icons">chat_bubble</i></button>
                             </div>
                         </div>
                     </div>
@@ -138,7 +141,8 @@
                     <h2>You Might <br>Like</h2>
                     <span>1 OF 5</span>
                     <div class="arrows">
-                        <!--ARROWS-->
+                        <i class="material-icons">arrow_back</i>
+                        <i class="material-icons">arrow_forward</i>
                     </div>
                 </div>
                 <div class="similar">
@@ -147,7 +151,7 @@
                     <span>STOCKHOLM 2017</span>
                     <h4>$12</h4>
                     <div class="end">
-                        <button>ADD TO CART</button>
+                        <button>ADD TO CART<i class="material-icons">check</i></button>
                     </div>
                 </div>
                 <div class="similar">
@@ -156,7 +160,7 @@
                     <span>FOTO</span>
                     <h4>$24</h4>
                     <div class="end">
-                        <button>ADD TO CART</button>
+                        <button>ADD TO CART<i class="material-icons">check</i></button>
                     </div>
                 </div>
                 <div class="similar">
@@ -165,7 +169,7 @@
                     <span>SIPPRA</span>
                     <h4>$12</h4>
                     <div class="end">
-                        <button>ADD TO CART</button>
+                        <button>ADD TO CART<i class="material-icons">check</i></button>
                     </div>
                     
                 </div>
@@ -185,9 +189,8 @@
                 </div>
             </div>
             <div class="footer">
-                <div class="logo">
-                    <a href="#">IKEA</a>
-                </div>
+                <img src="img/logo.svg" alt="logo">
+
                 <div class="shortcuts">
                     <div class="legend">
                         <h3>Inter IKEA Systems B.V. 1999-2017</h3>
@@ -197,15 +200,18 @@
                         <span>Services</span>
                         <span>Planning tools</span>
                         <span>Jobs</span>
-                        <span>Faq</span>
+                        <span>FAQ</span>
                         <span>Contact us</span>
                     </div>
                     <div class="up">
-                        <a href="#">Top</a>
+                        <a href="#"><i class="material-icons">arrow_upward</i></a>
                     </div>
                 </div>
                 <div class="icons">
-                    <!--ICONOS-->A
+                    <i class="material-icons md_gray">call</i>
+                    <i class="material-icons md_gray">email</i>
+                    <i class="material-icons md_gray">chat_bubble</i>
+                    <i class="material-icons md_gray">room</i>
                 </div>
             </div>
         </div>
