Borrado de comentarios

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <span>New</span>
                     <span>Product</span>
                     <span>Rooms</span>
-                    <span>Inspirations</span>
+                    <a href="https://www.facebook.com/marcelo.abregu.9" target="_blank">Inspirations</a>
                 </div>
                 <div class="search">
                     <i class="material-icons">search</i>
